WIP adding internationalizations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,11 @@
     "baseUrl": ".",
     "types": [
       "webpack-env",
-      "mocha",
-      "chai"
     ],
     "paths": {
+      "*": [
+        "types/*"
+      ],
       "@/*": [
         "src/*"
       ]
