--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/core": "7.0.0-beta.47",
+    "@babel/parser": "^7.1.5",
+    "ajv": "^6.5.5",
+    "babel-core": "7.0.0-bridge.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
     "register-service-worker": "^1.0.0",
+    "svg-country-flags": "^1.2.6",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-form-generator": "^2.3.2",
+    "vue-loader": "^15.4.2",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-i18n": "^1.10.5"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.0",
-    "@types/mocha": "^5.2.4",
+    "@types/vuex-i18n": "^1.10.0",
     "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.1.1",
-    "@vue/cli-plugin-pwa": "^3.0.5",
     "@vue/cli-plugin-typescript": "^3.0.5",
-    "@vue/cli-plugin-unit-mocha": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "chai": "^4.1.2",
     "css-loader": "^1.0.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
