added parallax effect

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "register-service-worker": "^1.0.0",
     "svg-country-flags": "^1.2.6",
     "vue": "^2.5.17",
+    "vue-awesome-countdown": "^1.0.11",
     "vue-class-component": "^6.0.0",
     "vue-form-generator": "^2.3.2",
     "vue-loader": "^15.4.2",
+    "vue-parallaxy": "^1.1.1",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
