--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv": "^6.5.5",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "circletype": "^2.3.0",
     "jquery": "^3.3.1",
     "register-service-worker": "^1.0.0",
     "svg-country-flags": "^1.2.6",
