resizing mostly fixed

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-loader": "^15.4.2",
     "vue-parallaxy": "^1.1.1",
     "vue-property-decorator": "^7.0.0",
+    "vue-resize-text": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5"
