--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "7.0.0-beta.47",
     "@babel/parser": "^7.1.5",
     "ajv": "^6.5.5",
+    "aos": "^3.0.0-beta.6",
     "babel-core": "7.0.0-bridge.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "circletype": "^2.3.0",
@@ -22,6 +23,7 @@
     "vue-class-component": "^6.0.0",
     "vue-form-generator": "^2.3.2",
     "vue-loader": "^15.4.2",
+    "vue-mouse-parallax": "^0.9.2",
     "vue-parallaxy": "^1.1.1",
     "vue-property-decorator": "^7.0.0",
     "vue-resize-text": "^0.1.0",
@@ -30,6 +32,7 @@
     "vuex-i18n": "^1.10.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.0",
     "@types/vuex-i18n": "^1.10.0",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-typescript": "^3.0.5",
