--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "vue-property-decorator": "^7.0.0",
     "vue-resize-text": "^0.1.0",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.13.0",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5"
   },
   "devDependencies": {
     "@types/aos": "^3.0.0",
+    "@types/vue-scrollto": "^2.7.2",
     "@types/vuex-i18n": "^1.10.0",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-typescript": "^3.0.5",
