--- a/package.json
+++ b/package.json
@@ -10,40 +10,42 @@
   },
   "dependencies": {
     "@babel/core": "7.0.0-beta.47",
-    "@babel/parser": "^7.4.3",
+    "@babel/parser": "^7.4.5",
     "ajv": "^6.10.0",
     "aos": "^3.0.0-beta.6",
     "babel-core": "7.0.0-bridge.0",
-    "bootstrap-vue": "^2.0.0-rc.18",
-    "jquery": "^3.4.0",
+    "bootstrap-vue": "^2.0.0-rc.22",
+    "jquery": "^3.4.1",
     "register-service-worker": "^1.6.2",
     "svg-country-flags": "^1.2.6",
     "vue": "^2.6.10",
-    "vue-awesome-countdown": "^1.0.12",
+    "vue-awesome-countdown": "^1.0.16",
     "vue-class-component": "^6.0.0",
     "vue-form-generator": "^2.3.4",
+    "vue-gallery": "^2.0.0",
     "vue-loader": "^15.7.0",
+    "vue-mouse-parallax": "^0.9.2",
     "vue-parallaxy": "^1.1.1",
     "vue-property-decorator": "^7.3.0",
     "vue-resize-text": "^0.1.0",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.4",
+    "vue-router": "^3.0.6",
     "vue-scrollto": "^2.15.0",
-    "vuex": "^3.1.0",
+    "vuex": "^3.1.1",
     "vuex-i18n": "^1.11.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.1",
     "@types/vue-scrollto": "^2.14.0",
-    "@types/vuex-i18n": "^1.10.0",
-    "@vue/cli-plugin-babel": "^3.6.0",
-    "@vue/cli-plugin-typescript": "^3.6.0",
-    "@vue/cli-service": "^3.6.0",
+    "@types/vuex-i18n": "^1.10.1",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-typescript": "^3.8.1",
+    "@vue/cli-service": "^3.8.3",
     "css-loader": "^1.0.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "style-loader": "^0.23.1",
-    "typescript": "^3.4.3",
+    "typescript": "^3.5.1",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
